View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033570 | Community | OCCT:Modeling Algorithms | public | 2024-01-13 15:26 | 2024-07-17 12:56 |
Reporter | dpasukhi | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | verified | Resolution | fixed | ||
Target Version | Unscheduled | Fixed in Version | 7.9.0 | ||
Summary | 0033570: Modeling Algorithms - Incorrect result of cutting spheres | ||||
Description | I found there might be a problem of the BRepAlgoAPI_Cut algorithm. For 2 spheres,s1 and s2: s1=BRepPrimAPI_MakeSphere(gp_Pnt(0,5.5,18),4.0).Shape() s2=BRepPrimAPI_MakeSphere(gp_Pnt(0,4.5,14),1.0).Shape() as shown in pict1. when I cut the s2 from s1 using the BRepAlgoAPI_Cut and got the shape s3: s3=BRepAlgoAPI_Cut(s1,s2).Shape() The result is shown in pict2. It seems the result is wrong. But when I change the radius of sphere s2 from 1.0 to 0.99, I got the right shape as shown in pict3. | ||||
Steps To Reproduce | psphere s1 4 psphere s2 1 ttranslate s1 0 5.5 18 ttranslate s2 0 4.5 14 bcut result s1 s2 | ||||
Additional information and documentation updates | https://dev.opencascade.org/content/wrong-shape-brepalgoapicut | ||||
Tags | No tags attached. | ||||
Test case number | tests/bugs/modalg_8/bug33570 | ||||
|
pict3.png (108,718 bytes) pict2.png (105,172 bytes) pict1.png (103,675 bytes) |
|
Branch CR33570 has been created by andrey.kaftasev_159541. SHA-1: bf8729d2aa5c746ced6e3d80ffe2862da1cf7f07 Detailed log of new commits: Author: akaftasev Date: Thu Jun 13 16:06:47 2024 +0100 0033570: Modeling Algorithms - Incorrect result of cutting spheres The reason of current problem lies inside projection algorithm Function_SetUVBounds() for projection of circle onto sphere produces shifted bounds. Incorrect checking of placement on summit of the sphere was fixed. |
|
Branch CR33570_1 has been created by andrey.kaftasev_159541. SHA-1: 34af19d112a9f8038d95ea062a064e89f7779670 Detailed log of new commits: Author: akaftasev Date: Thu Jul 4 13:48:22 2024 +0100 0033570: Modeling Algorithms - Incorrect result of cutting spheres The reason of current problem lies inside projection algorithm Function_SetUVBounds() for projection of circle onto sphere produces shifted bounds. Incorrect checking of placement on summit of the sphere was fixed. |
|
Results of testing: http://jenkins-test-10.nnov.opencascade.com/view/CR33570-CR33728-akaftasev/view/COMPARE/ |
|
PR: https://github.com/Open-Cascade-SAS/OCCT/pull/26 |
|
Branch CR33570 has been deleted by vglukhik. SHA-1: bf8729d2aa5c746ced6e3d80ffe2862da1cf7f07 |
|
Branch CR33570_1 has been deleted by vglukhik. SHA-1: 34af19d112a9f8038d95ea062a064e89f7779670 |
Date Modified | Username | Field | Change |
---|---|---|---|
2024-01-13 15:26 | dpasukhi | New Issue | |
2024-01-13 15:26 | dpasukhi | Assigned To | => akaftasev |
2024-01-13 15:27 | dpasukhi | Note Added: 0114908 | |
2024-01-13 15:27 | dpasukhi | File Added: pict3.png | |
2024-01-13 15:27 | dpasukhi | File Added: pict2.png | |
2024-01-13 15:27 | dpasukhi | File Added: pict1.png | |
2024-06-17 12:30 | git | Note Added: 0116047 | |
2024-07-04 15:49 | git | Note Added: 0116117 | |
2024-07-08 18:51 | akaftasev | Assigned To | akaftasev => dpasukhi |
2024-07-08 18:51 | akaftasev | Status | new => resolved |
2024-07-08 18:51 | akaftasev | Steps to Reproduce Updated | |
2024-07-08 18:51 | akaftasev | Note Added: 0116143 | |
2024-07-08 21:18 | dpasukhi | Note Added: 0116145 | |
2024-07-08 21:19 | dpasukhi | Assigned To | dpasukhi => bugmaster |
2024-07-08 21:19 | dpasukhi | Status | resolved => reviewed |
2024-07-15 18:54 | dpasukhi | Status | reviewed => verified |
2024-07-15 18:54 | dpasukhi | Resolution | open => fixed |
2024-07-15 18:54 | dpasukhi | Fixed in Version | => 7.9.0 |
2024-07-15 18:54 | dpasukhi | Test case number | => tests/bugs/modalg_8/bug33570 |
2024-07-17 12:56 | git | Note Added: 0116213 | |
2024-07-17 12:56 | git | Note Added: 0116214 |